[package]
name = "hive-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hive"
path = "hive-cli/src/main.rs"

[workspace]
members = ["hive-core"]

[dependencies]
anyhow = "1.0.52"
hive-core = { path = "hive-core" }
hyper = { version = "0.14.16", features = ["full"] }
multer = "2.0.2"
once_cell = "1.9.0"
serde = "1.0.132"
serde_json = "1.0.73"
slug = "0.1.4"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
