[package]
name = "hive-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hive"
path = "hive-cli/src/main.rs"

[workspace]
members = ["hive-core"]

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
backtrace = "0.3.63"
hive-core = { path = "hive-core" }
hyper = { version = "0.14.16", features = ["full"] }
multer = "2.0.2"
once_cell = "1.9.0"
serde = "1.0.133"
serde_json = { version = "1.0.74", features = ["preserve_order"] }
slug = "0.1.4"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
