[package]
name = "hive-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hive"
path = "hive-server/src/main.rs"

[workspace]
members = ["hive-core", "hive-asar", "hive-vfs"]

[dependencies]
anyhow = { version = "1.0.52", features = ["backtrace"] }
backtrace = "0.3.63"
hive-core = { path = "hive-core" }
home = "0.5.3"
hyper = { version = "0.14.16", features = ["full"] }
log = "0.4.14"
multer = "2.0.2"
num_cpus = "1.13.1"
once_cell = "1.9.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = { version = "1.0.74" }
slug = "0.1.4"
structopt = "0.3.26"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["serde"] }
