[package]
name = "abel"
version = "0.1.0"
edition = "2021"

[dependencies]
abel-core = { path = "../core" }
# abel-rt = { path = "../rt" }
anyhow = { version = "1.0.52", features = ["backtrace"] }
async-trait = "0.1.56"
backtrace = "0.3.63"
bytes = "1.2.0"
clap = { version = "3.2.5", features = ["derive"] }
futures = "0.3.19"
hive-asar = "0.4.0"
home = "0.5.3"
hyper = { version = "0.14.16", features = ["full"] }
libc = "0.2.126"
log = "0.4.14"
multer = "2.0.2"
notify = "=5.0.0-pre.15"
num_cpus = "1.13.1"
once_cell = "1.9.0"
owo-colors = "3.4.0"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.74", features = ["preserve_order"] }
serde_qs = "0.9.1"
slug = "0.1.4"
strum = { version = "0.24.0", features = ["derive"] }
tempfile = "3.3.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["io"] }
uuid = { version = "0.8.2", features = ["serde"] }
