[package]
name = "abel-core"
version = "0.1.0"
edition = "2021"

[dependencies]
abel-rt = { path = "../rt" }
async-trait = "0.1.53"
backtrace = "0.3.63"
clru = "0.5.0"
dashmap = "5.0.0"
futures = "0.3.17"
hyper = "0.14.16"
log = "0.4.14"
nonzero_ext = "0.3.0"
once_cell = "1.9.0"
pin-project = "1.0.10"
regex = "1.5.4"
replace_with = "0.1.7"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
smallstr = { version = "0.3.0", features = ["std", "serde", "union"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1.0.57"
hyper = { version = "0.14.16", features = ["full"] }
pretty_env_logger = "0.4.0"
test-case = "2.0.0"
