[package]
name = "abel-core"
version = "0.1.1"
description = "Core library of Abel."
repository = "https://github.com/hack3ric/abel"
license = "MIT"
edition = "2021"

[features]
mlua-vendored = ["mlua/vendored"]
tls-vendored = ["hyper-tls/vendored"]

[dependencies.mlua]
version = "0.8.2"
features = ["lua54", "async", "serialize"]

[dependencies]
async-trait = "0.1.53"
backtrace = "0.3.63"
clru = "0.5.0"
dashmap = "5.0.0"
futures = "0.3.17"
hyper = { version = "0.14.16", features = ["full"] }
log = "0.4.14"
nonzero_ext = "0.3.0"
once_cell = "1.9.0"
parking_lot = "0.12.1"
pin-project = "1.0.10"
regex = "1.5.4"
replace_with = "0.1.7"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
smallstr = { version = "0.3.0", features = ["std", "serde", "union"] }
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tokio-util = { version = "0.7.3", features = ["io"] }
rand = "0.8.5"
ouroboros = "0.15.1"
bstr = "0.2.17"
tempfile = "3.3.0"
libc = "0.2.126"
paste = "1.0.7"
hyper-tls = "0.5.0"
serde_qs = "0.10.1"
serde_regex = "1.1.0"
anyhow = "1.0.57"
itertools = "0.10.4"
sha2 = "0.10.6"
data-encoding = "2.3.2"

[dev-dependencies]
anyhow = "1.0.57"
hyper = { version = "0.14.16", features = ["full"] }
pretty_env_logger = "0.4.0"
test-case = "2.0.0"
