[package]
name = "hive-asar"
version = "0.1.0"
edition = "2021"

[features]
# default = ["vfs"]
vfs = ["hive-vfs", "async-trait"]

[dependencies]
async-trait = { version = "0.1.52", optional = true }
futures = "0.3.19"
hive-vfs = { path = "../hive-vfs", optional = true }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
tokio = { version = "1.16.0", features = ["full"] }
