[package]
name = "hive-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["vendored"]
vendored = ["mlua/vendored"]

[dependencies]
backtrace = "0.3.63"
dashmap = "5.0.0"
futures = "0.3.17"
hyper = "0.14.16"
hyper-tls = "0.5.0"
log = "0.4.14"
mlua = { version = "0.7.0", features = ["lua54", "send", "async", "macros", "serialize"] }
nonzero_ext = "0.3.0"
once_cell = "1.9.0"
# `send_guard` is to make sure `ArcRwLockWriteGuard` in `TableScope` is `Send`
parking_lot = { version = "0.12.0", features = ["arc_lock", "send_guard"] }
regex = "1.5.4"
replace_with = "0.1.7"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_qs = "0.9.1"
smallstr = { version = "0.3.0", features = ["std", "serde", "union"] }
smallvec = "1.8.0"
strum = { version = "0.24.0", features = ["derive"] }
thiserror = "1.0.30"
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["io"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }

[dev-dependencies]
hyper = { version = "0.14.16", features = ["full"] }
test-case = "2.0.0"
