[package]
name = "abel-rt"
version = "0.1.0"
edition = "2021"

[features]
default = ["vendored"]
vendored = ["mlua/vendored"]

[dependencies.mlua]
version = "0.8.1"
features = ["lua54", "async", "macros", "serialize"]

[dependencies]
hyper = { version = "0.14.20", features = ["client", "http1", "http2", "stream"] }
once_cell = "1.13.0"
rand = "0.8.5"
serde_json = "1.0.82"
tokio-util = { version = "0.7.3", features = ["io"] }
serde = "1.0.138"
tempfile = "3.3.0"
pin-project = "1.0.11"
tokio = { version = "1.19.2", features = ["full"] }
ouroboros = "0.15.0"
bstr = "0.2.17"
async-trait = "0.1.56"
serde_qs = "0.9.2"
futures = "0.3.21"
hyper-tls = "0.5.0"
log = "0.4.17"
libc = "0.2.126"
thiserror = "1.0.31"
paste = "1.0.7"

[dev-dependencies]
pretty_env_logger = "0.4.0"
test-case = "2.1.0"
